Revert "windows: replace uses of winapi with winapi-util"
This reverts commit a6935c022fa82b49f931583b09bcae3a014e0fb1.

--- a/wincolor/Cargo.toml
+++ b/wincolor/Cargo.toml
@@ -16,9 +16,6 @@ license = "Unlicense OR MIT"
 name = "wincolor"
 bench = false
 
-[dependencies]
-winapi-util = "0.1.1"
-
 [dependencies.winapi]
 version = "0.3"
-features = ["minwindef", "wincon"]
+features = ["consoleapi", "minwindef", "processenv", "winbase", "wincon"]
